--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: lit_firebase_auth
-description: A new Flutter package project.
+description: Pre-lit Firebase Authentication. Drop in and add Firebase Auth in just minutes.
+repository: https://github.com/funwithflutter/lit_firebase_auth
+homepage: https://github.com/funwithflutter/lit_firebase_auth
+
 version: 0.0.1
-author:
-homepage:
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,13 +15,10 @@ dependencies:
   google_sign_in: ^4.5.1
   freezed_annotation: ^0.11.0
   dartz: ^0.9.1
-  uuid: ^2.2.0
   provider: ^4.2.0
   state_notifier: ^0.5.0
   flutter_state_notifier: ^0.4.2
   flushbar: ^1.10.4
-  hooks_riverpod: ^0.5.1
-  flutter_hooks: ^0.12.0
 
 dev_dependencies:
   flutter_test:
