--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # auth
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
+  # state
   freezed_annotation: ^0.11.0
   dartz: ^0.9.1
   provider: ^4.2.0
   state_notifier: ^0.5.0
   flutter_state_notifier: ^0.4.2
+  # ui
   flushbar: ^1.10.4
   flutter_auth_buttons: ^0.8.0
 
