--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   # auth
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
-  # state
+  # annotation
+  meta: ^1.1.8
   freezed_annotation: ^0.11.0
+  # state
   dartz: ^0.9.1
   provider: ^4.2.0
   state_notifier: ^0.5.0
