--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.2.0
-  build_runner:
-  freezed:
+  build_runner: ^1.10.0
+  freezed: ^0.11.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
