--- a/lit_firebase_auth/pubspec.yaml
+++ b/lit_firebase_auth/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   # ui
   flushbar: ^1.10.4
   flutter_auth_buttons: ^0.8.0
+  lit_firebase_auth_platform_interface:
+    path: ../lit_firebase_auth_platform_interface
+  lit_firebase_auth_web:
+    path: ../lit_firebase_auth_web
 
 dev_dependencies:
   flutter_test:
