feat: update to use federated plugins

--- a/lit_firebase_auth/pubspec.yaml
+++ b/lit_firebase_auth/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   # auth
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
-  sign_in_with_apple: ^2.5.2
   # annotation
   meta: ^1.1.8
   freezed_annotation: ^0.11.0
@@ -30,6 +29,7 @@ dependencies:
     path: ../lit_firebase_auth_platform_interface
   lit_firebase_auth_web:
     path: ../lit_firebase_auth_web
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +43,17 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+  plugin:
+    platforms:
+      android:
+        # pluginClass: LitFirebaseAuthPlatform
+        default_package: lit_firebase_auth_platform_interface
+      ios:
+        # pluginClass: LitFirebaseAuthPlatform
+        # pluginClass: FLTURLLauncherPlugin
+        default_package: lit_firebase_auth_platform_interface
+      web:
+        default_package: url_launcher_web
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
