--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Pre-lit Firebase Authentication. Drop in and add Firebase Auth in j
 repository: https://github.com/funwithflutter/lit_firebase_auth
 homepage: https://github.com/funwithflutter/lit_firebase_auth
 
-version: 0.1.3
+version: 0.2.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -17,16 +17,15 @@ dependencies:
   google_sign_in: ^4.5.1
   firebase_auth_oauth: ^0.1.1+1
   # annotation
-  meta: ^1.1.8
-  freezed_annotation: ^0.11.0
+  meta: ^1.2.2
+  freezed_annotation: ^0.11.0+1
   # state
   dartz: ^0.9.1
   provider: ^4.2.0
-  state_notifier: ^0.5.0
-  flutter_state_notifier: ^0.4.2
+  state_notifier: ^0.6.0
+  flutter_state_notifier: ^0.6.1
   # ui
   flushbar: ^1.10.4
-  flutter_auth_buttons: ^0.8.0
 
 dev_dependencies:
   flutter_test:
