--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   # auth
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
+  sign_in_with_apple: ^2.5.2
+  crypto: ^2.1.5
   google_sign_in: ^4.5.1
   firebase_auth_oauth: ^0.2.4
   # annotation
