--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
   # auth
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
-  sign_in_with_apple: ^2.5.2
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  sign_in_with_apple: ^3.0.0
   crypto: ^2.1.5
-  google_sign_in: ^4.5.1
-  firebase_auth_oauth: ^0.2.4
+  google_sign_in: ^5.0.0
+  firebase_auth_oauth: ^1.0.1
   # annotation
   meta: ^1.1.8
-  freezed_annotation: ^0.11.0+1
+  freezed_annotation: ^0.14.0
   # state
   dartz: ^0.9.1
   provider: ^4.2.0
@@ -28,14 +28,14 @@ dependencies:
   flutter_state_notifier: ^0.6.1
   # ui
   flushbar: ^1.10.4
-  flutter_facebook_auth: ^1.0.0
+  flutter_facebook_auth: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.2.0
   build_runner: ^1.10.0
-  freezed: ^0.11.2
+  freezed: ^0.14.0+1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
