Removing facebook auth

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   provider: ^4.2.0
   state_notifier: ^0.6.0
   flutter_state_notifier: ^0.6.1
-  # ui
+  # ui``
   flushbar: ^1.10.4
-  flutter_facebook_auth: ^3.0.0+1
+#  flutter_facebook_auth: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
