--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,27 +12,30 @@ dependencies:
   flutter:
     sdk: flutter
   # auth
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.18.0+1
-  google_sign_in: ^4.5.1
-  firebase_auth_oauth: ^0.2.1
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  sign_in_with_apple: ^3.0.0
+  crypto: ^3.0.0
+  google_sign_in: ^5.0.0
+  firebase_auth_oauth: ^1.0.1
   # annotation
   meta: ^1.1.8
-  freezed_annotation: ^0.11.0+1
+  freezed_annotation: ^0.14.0
   # state
   dartz: ^0.9.1
   provider: ^4.2.0
   state_notifier: ^0.6.0
   flutter_state_notifier: ^0.6.1
-  # ui
+  # ui``
   flushbar: ^1.10.4
+  flutter_facebook_auth: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.2.0
   build_runner: ^1.10.0
-  freezed: ^0.11.2
+  freezed: ^0.14.0+1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -46,6 +49,7 @@ flutter:
     - graphics/apple_logo_black.png
     - graphics/apple_logo_white.png
     - graphics/google_logo.png
+    - graphics/facebook.png
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
