--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,29 +12,29 @@ dependencies:
   flutter:
     sdk: flutter
   # auth
-  firebase_core: ^1.0.1
-  firebase_auth: ^1.0.1
-  sign_in_with_apple: ^3.0.0
-  crypto: ^3.0.0
-  google_sign_in: ^5.0.0
-  firebase_auth_oauth: ^1.0.1
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
+  sign_in_with_apple: ^3.3.0
+  crypto: ^3.0.1
+  google_sign_in: ^5.1.0
+  firebase_auth_oauth: ^1.1.0
   # annotation
   meta: ^1.1.8
-  freezed_annotation: ^0.14.0
+  freezed_annotation: ^0.14.2
   # state
-  dartz: ^0.9.1
-  provider: ^4.2.0
-  state_notifier: ^0.6.0
-  flutter_state_notifier: ^0.6.1
+  dartz: ^0.10.0
+  provider: ^6.0.1
+  state_notifier: ^0.7.1
+  flutter_state_notifier: ^0.7.1
   # ui``
   flushbar: ^1.10.4
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.2.0
-  build_runner: ^1.10.0
-  freezed: ^0.14.0+1
+  lint: ^1.5.3
+  build_runner: ^2.1.2
+  freezed: ^0.14.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
